FileUndoManager: fix job description when undoing a batch-renaming

It should be "Renaming", not "Moving".

BUG: 437510
FIXED-IN: 5.97